# MIRP

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  Doxyfile  LICENSE  README.md  all_8h.html  all_8h__dep__incl.map  all_8h__dep__incl.md5  all_8h__incl.map  all_8h__incl.md5  all_8h_source.html  annotated.html  binaries.html  binaries_8dox.html  boys_8c.html  boys_8c__incl.map  boys_8c__incl.md5  boys_8h.html  boys_8h__dep__incl.map  boys_8h__dep__incl.md5  boys_8h__incl.map  boys_8h__incl.md5  boys_8h_source.html  boys__d_8c.html  boys__d_8c__incl.map  boys__d_8c__incl.md5  boys__test_8cpp.html  boys__test_8cpp__incl.map  boys__test_8cpp__incl.md5  boys__test_8hpp.html  boys__test_8hpp__dep__incl.map  boys__test_8hpp__dep__incl.md5  boys__test_8hpp__incl.map  boys__test_8hpp__incl.md5  boys__test_8hpp_source.html  boys_function.html  building.html  (+321 more)
attic/: boys_manual_interval.c  eri_double.c  eri_interval.c  eri_mp.c  gpt.c  loops_mp.c  math.c  shell.c  shell.cpp  shell.hpp
attic/mirppy/: export_boys.c  export_eri.c
attic/sphinxdoc/: Makefile  conf.py  conventions.rst  index.rst  overview.rst  theory.rst  theory_boys.rst  theory_gpt.rst  theory_overlap.rst
build_scripts/: README  arch_matrix.txt  build_deps.sh  build_deps_linux.sh  build_deps_mac.sh  build_deps_macosx.sh  build_deps_matrix.sh  build_mirp.sh  build_mirp_matrix.sh  create_mirp_matrix.sh  deps_README.in  generate_test_matrix.sh  mirp_README.in  mirp_testmatrix.txt  package_mirp.sh  package_mirp_linux.sh  package_mirp_mac.sh  package_mirp_macosx.sh  package_mirp_matrix.sh  test_mirp.sh  test_mirp_linux.sh  test_mirp_matrix.sh
cmake/: mirpConfig.cmake.in  mirpDependencies.cmake  mirpFlags.cmake
doc/: Doxyfile  binaries.dox  boys.dox  building.dox  conf.py  conventions.dox  examples.dox  fileformat.dox  filesystem.dox  functiontypes.dox  gpt.dox  index.rst  introduction.rst  kernel_boys.dox  kernel_eri.dox  kernel_gtoeri.dox  mainpage.dox  namespaces.dox  tests.dox  tests_formats.dox  theory.rst  theory_boys.rst  theory_eri.rst  using_library.dox  using_programs.dox  using_reffiles.dox
doc/examples/: 4center_example.inp  4center_example.ref  4center_single_example.inp  4center_single_fordoc.inp.new  README  boys_fordoc.inp  build_install_1.sh
examples/: CMakeLists.txt  README  read_ref.cpp  simple_eri.c  simple_gtoeri.c
mirp/: CMakeLists.txt  arb_help.c  arb_help.h  boys.h  boys_double.c  boys_interval.c  boys_mp.c  eri.c  eri.h  eri_double.c  eri_interval.c  eri_mp.c  gpt.c  gpt.h  loops.c  loops.h  loops_d.c  loops_double.c  loops_interval.c  loops_mp.c  math.c  math.h  mirp.h  mpfr_help.c  mpfr_help.h  pragma.h  shell.c  shell.h  typedefs.h  wrappers.c  wrappers.h
mirp/kernels/: all.h  boys.c  boys.h  boys_d.c  boys_double.c  boys_interval.c  boys_mp.c  eri.c  eri.h  eri_d.c  eri_double.c  eri_interval.c  eri_mp.c  gtoeri.c  gtoeri.h  integral4_wrappers.c  integral4_wrappers.h
mirp_bin/: CMakeLists.txt  boys_create_test.cpp  boys_run_test.cpp  boys_test.cpp  boys_test.hpp  boys_test_file.cpp  boys_test_file.hpp  callback_helper.hpp  callback_helper4.hpp  cmdline.cpp  cmdline.hpp  data_entry.hpp  eri_single_test.cpp  eri_single_test.hpp  file_io.cpp  file_io.hpp  mirp_create_reference.cpp  mirp_create_test.cpp  mirp_play.cpp  mirp_run_test.cpp  mirp_test.cpp  mirp_test_reference.cpp  mirp_verify_reference.cpp  mirp_verify_test.cpp  read_construct_basis.cpp  ref_integral.cpp  ref_integral.hpp  ref_integral4.cpp  ref_integral4.hpp  reffile_io.cpp  reffile_io.hpp  run_boys_test.cpp  shell.hpp  test_boys.cpp  test_boys.hpp  test_common.cpp  test_common.hpp  test_common_integral4.cpp  test_common_integral4_single.cpp  test_files.cpp  (+9 more)
mirppy/: CMakeLists.txt  __init__.py  export.c  export_boys.c  export_eri.c  testing_utilities.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_74.js  all_77.js  all_78.js  all_7a.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_62.js  classes_67.js  classes_69.js  defines_0.js  defines_1.js  (+73 more)
test/: CMakeLists.txt  compare_boys_python.py  compare_boys_testfiles.py  test_common.cpp
test/old/: boys_compare.c  boys_create_testfile.c  double_compare.c
test_data/: 4center_random_1.inp  4center_single_random_1.inp  4center_single_water_sto3g.inp  boys_large_range.inp  create.sh  eri_single_random_1.inp  sha256sums
test_data/generator/: generate_boys_range.py  generate_integral_random.py  generate_integral_single_frombasis.py  generate_integral_single_random.py  generate_single_eri.py  generate_single_eri_random.py
test_data/generator/common/: __init__.py  basis.py  boys.py  geometry.py  printing.py  read_basis.py  read_files.py  read_xyz.py  shell.py
test_data/generator/geometry/: water.xyz
test_data/verify/: boys_verify_mathematica.nb  boys_verify_mpmath.py  boys_verify_selftest.py
tests/: 4center_random_1.inp  4center_single_random_1.inp  4center_single_water_sto-3g.inp  4center_single_water_sto3g.inp  4center_water_sto-3g.inp  4center_water_sto3g.inp  CMakeLists.txt  CMakeMacros.txt  boys_large_random.inp  boys_large_range.inp  create.sh  eri_water_sto-3g.ref  eri_water_sto3g.ref  gtoeri_water_sto-3g.ref  sha256sums
tests/generator/: generate_boys_random.py  generate_boys_range.py  generate_enucpot_single_random.py  generate_integral_frombasis.py  generate_integral_random.py  generate_integral_single_frombasis.py  generate_integral_single_random.py
tests/generator/basis/: ano-rcc.bas  aug-cc-pvqz.bas  aug-cc-pvtz.bas  roos-ano-tz.bas  sto-3g.bas
tests/generator/common/: __init__.py  basis.py  geometry.py  printing.py  randomgen.py
tests/generator/geometry/: h2.xyz  u2-2ang.xyz
tests/verify/: boys_verify_mathematica.nb  boys_verify_mpmath.py
travis/: build_deps.sh
